--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Chris Zempel <chris.m.zempel@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel": "^6.23.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "react": "^15.4.2",
