--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-router": "^4.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.0",
+    "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "http-server": "^0.9.0",
     "webpack": "^2.2.1"
   }
