--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^4.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.0",
     "babel-preset-env": "^1.2.1",
